# citysketch

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  ci_build_deb.sh  citysketch.py  pyproject.toml
citysketch/: App3dview.py  AppDialogs.py  AppMain.py  AppSettings.py  Building.py  ColorDialogs.py  ColorSettings.py  GeoJSON.py  _version.py  austaltxt.py  building_simplification.py  custom_types.py  utils.py
docs/: 3d-visualization.rst  basemaps-geotiff.rst  creating-buildings.rst  editing-buildings.rst  file-formats.rst  getting-started.rst  index.rst  keyboard-shortcuts.rst  troubleshooting.rst  user-interface.rst
docs/appendix/: acknowledgments.rst  changelog.rst  license.rst
docs/technical/: api-reference.rst  architecture.rst  development.rst  file-formats-detailed.rst
